--- a/JiaoBaoYun-hb/html/show/show-detail.html
+++ b/JiaoBaoYun-hb/html/show/show-detail.html
@@ -42,7 +42,7 @@
 				</div>
 				<div class="mui-pull-right extra-container">
 					<span class="iconfont icon-support" v-bind:class="{isLiked:showDetail.IsLike,isUnlike:!showDetail.IsLike}" v-on:tap="toggleLike"></span>
-					<span class="iconfont icon-liaotian1" v-on:click="openComment"></span>
+					<span class="iconfont icon-liaotian1" v-on:click="openComment(0)"></span>
 				</div>
 				<div v-if="showDetail.LikeUsers&&showDetail.LikeUsers.length>0" style="width: 100%;">
 					<hr style="width: 100%;" />
@@ -59,7 +59,7 @@
 					<div class=" banner-left"></div>
 					<div class="comments-no">评论({{showDetail.TotalCnt}})</div>
 				</div>
-				<div class="comments-li mui-table-view-cell" v-for="(comment,index0) of showDetail.Comments" v-on:tap="openComment" v-on:longtap="showSheet(comment,index0)">
+				<div class="comments-li mui-table-view-cell" v-for="(comment,index0) of showDetail.Comments" v-on:tap.stop="openComment(1,index0)" v-on:longtap.stop="showSheet(comment,index0)">
 					<div class="comment-person"><img class="comment-img" v-bind:src="comment.UserImg" v-on:tap.stop="openPersonSpace(comment.UserId)" />
 						<div class="comment-name">{{comment.UserName}}</div>
 					</div>
@@ -71,7 +71,6 @@
 						<p class="comment-date">{{getSimpleDate(comment.CommentDate)}}</p>
 					</div>
 					<div class="replies-container" v-if="comment.Replys.length>0">
-						<div class="reply-li" v-for="(reply,index1) of comment.Replys" v-on:longtap="showSheet(comment,index0,index1)">
 							<p class="reply-content"><span class="reply-name">{{reply.UserName}}</span>
 						<template v-if="reply.ReplyName">
 							@<span class="reply-name">{{reply.ReplyName}}</span>
@@ -123,6 +122,10 @@
 					console.log("获取的数据:" + JSON.stringify(e.detail.data));
 					var showInfo = e.detail.data;
 					tableId = showInfo.TabId;
+					requestShowDetail();
+				})
+				window.addEventListener("commented",function(){
+					pageIndex=1;
 					requestShowDetail();
 				})
 			})
