--- a/JiaoBaoYun-hb/html/show/show-detail.html
+++ b/JiaoBaoYun-hb/html/show/show-detail.html
@@ -33,13 +33,13 @@
 				<div v-if="showDetail.EncType===5" class="show-content" v-html="showDetail.MsgContent"></div>
 				<div v-else class="show-content">{{showDetail.MsgContent}}</div>
 				<div v-if="showDetail.EncType!==5" style="width: 100%;">
-					<div v-for="img of getImgs(showDetail)" v-if="img.type===2" class="display-inlineBlock" v-bind:class="{flexStyle}" v-bind:style="[{background:'linear-gradient(to bottom,rgba(0,0,0,0.4),rgba(0,0,0,0) 20%,rgba(0,0,0,0) 80%,rgba(0,0,0,0.4)),url('+img.encImg+')'},imgDivRe,{'background-size':'contain','background-repeat':'no-repeat'}]"
-						 style="position: relative; margin: 0 2.5px;" v-on:tap="exFileTapListener(showDetail)">
+					<div v-for="(img,index) of getImgs(showDetail)" v-if="img.type===2" class="display-inlineBlock" v-bind:class="{flexStyle}" v-bind:style="[{background:'linear-gradient(to bottom,rgba(0,0,0,0.4),rgba(0,0,0,0) 20%,rgba(0,0,0,0) 80%,rgba(0,0,0,0.4)),url('+img.encImg+')'},imgDivRe,{'background-size':'contain','background-repeat':'no-repeat'}]"
+						 style="position: relative; margin: 0 2.5px;" v-on:tap.stop="exFileTapListener(showDetail,img,index)">
 						<img  src="../../image/utils/playvideo.png" style="width:50px;height:50px;margin: auto 0;">
 						<p v-if="img.encLen>0" style="position: absolute;bottom: 0;right: 5px;color: white;line-height: 0;">{{img.encLen}}"</p>
 					</div>
-					<div v-for="img of getImgs(showDetail)" v-if="img.type===1" class="display-inlineBlock"  v-bind:style="[{'background-image':'url('+img.encImg+')'},imgDivRe]" 
-						style="position: relative; margin: 0 2.5px; background-repeat:no-repeat;background-position:center;background-size: cover;text-align: center;" v-on:tap="exFileTapListener(showDetail)">
+					<div v-for="(img,index) of getImgs(showDetail)" v-if="img.type===1" class="display-inlineBlock"  v-bind:style="[{'background-image':'url('+img.encImg+')'},imgDivRe]" 
+						style="position: relative; margin: 0 2.5px; background-repeat:no-repeat;background-position:center;background-size: cover;text-align: center;" v-on:tap="exFileTapListener(showDetail,img,index)">
 					</div>
 				</div>
 				<div class="mui-pull-right extra-container">
@@ -90,6 +90,7 @@
 		<script src="../../js/mui.zoom.js"></script>
 		<script src="../../js/mui.previewimage.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/utils/video.js"></script>
 		<script src="../../js/show/show-comment.js"></script>
 		<script type="text/javascript">
 			var pageIndex = 1;
