修改验证码返回提示框样式

--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -126,9 +126,10 @@
 							break;
 						case 1: //返回
 							mui.back();
+							mui.back();
 							break;
 					}
-				});
+				},'div');
 
 			}
 			//遇到登录问题
