--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -51,7 +51,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">作业详情</h1>
-			<a id="modifyHomework" class="mui-pull-right">修改</a>
+			<a id="modifyHomework" class="mui-pull-right display-none">修改</a>
 		</header>
 
 		<div class="mui-content mui-scroll-wrapper">
