--- a/JiaoBaoYun-hb/html/show/detail-comment.html
+++ b/JiaoBaoYun-hb/html/show/detail-comment.html
@@ -16,7 +16,7 @@
 			<a id="publish" class="mui-pull-right">发布</a>
 		</header>
 		<div class="mui-content">
-			<textarea id="comment-area" rows="10" maxlength="200"></textarea>
+			<textarea id="comment-area" rows="10" maxlength="300" placeholder="请输入评论/回复内容，最多300字"></textarea>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
