--- a/JiaoBaoYun-hb/html/mine/ReadQRCode.html
+++ b/JiaoBaoYun-hb/html/mine/ReadQRCode.html
@@ -16,7 +16,7 @@
 			<h1 class="mui-title">扫描二维码</h1>
 		</header>
 
-		<div id="bcid" style="position: absolute;top: 44px;left: 0px;width: 100%;height: 100%;"></div>
+		<div id="bcid" style="position: absolute;top: 44px;left: -10%;width: 120%;height: 100%;"></div>
 
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
@@ -36,6 +36,9 @@
 			}; //扫描到的数据，组成model
 			mui.plusReady(function() {
 				setTimeout(startRecognize,500);
+				var barHeight=plus.navigator.getStatusbarHeight();
+				console.log("状态栏高度："+barHeight);
+				document.getElementById("bcid").style.top=(45-barHeight)+'px';
 			});
 			// 条码识别成功事件
 			function onmarked(type, result) {
