--- a/JiaoBaoYun-hb/html/cloud/storage_transport.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_transport.html
@@ -548,10 +548,10 @@
 								downloadList.value[ids[2]].state = 5;
 								document.getElementById("down_waiting_" + ids[2]).innerText = '暂停中';
 								document.getElementById("down_btn_" + ids[2]).innerText = '继续';
-								//开始下一个任务
-								downloadingId = null;
-								startDownloadingNetType();
 							}
+							//开始下一个任务
+							downloadingId = null;
+							startDownloadingNetType();
 							break;
 						case 5: //继续下载任务
 							if(downloadingId == null) { //没有正在下载的任务
@@ -786,9 +786,14 @@
 								console.log('下载任务请求已经接收:|id:' + id + '|downloadState:' + download.state);
 								break;
 							case 3: //下载任务接收数据
-								console.log('下载任务接收数据:|id:' + id + '|downloadState:' + download.state);
-								//下载任务id
+								//console.log('下载任务接收数据:|id:' + id + '|downloadState:' + download.state);
 								downloadList.value[id].state = 3;
+								if(downloadingId !== id) { //只允许一个下载任务进行
+									download.pause();
+									downloadList.value[id].state = 5;
+									document.getElementById("down_waiting_" + id).innerText = '暂停中';
+									document.getElementById("down_btn_" + id).innerText = '继续';
+								}
 								//已下载数据的大小
 								var downloadSize = AndroidFileSystem.readSize(download.downloadedSize);
 								//下载数据的总大小
