个人空间 视频

--- a/JiaoBaoYun-hb/html/index/firstPage.html
+++ b/JiaoBaoYun-hb/html/index/firstPage.html
@@ -9,7 +9,8 @@
 	</head>
 
 	<body>
-		<img src="../../image/ios_1242-2208.png" class="mui-fullscreen" style="width: 100%;height: 100%;" />
+		<div  style="background-image:url(../../image/ios_1242-2208.png);background-position: center; background-size: cover;background-repeat: no-repeat;"
+			 class="mui-fullscreen" style="width: 100%;height: 100%;" ></div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
